--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,19 @@
 .body {
     padding-left: 10%;
     padding-right: 10%;
-  
+
 }
 
 .topnav {
     display: flex;
-    background-color:#867D2A;
+    background-color: #867D2A;
     color: white;
     height: fit-content;
     width: 100%;
     justify-content: space-between;
 }
-.list{
+
+.list {
     margin-top: 1%;
     background-color: #867D2A;
 }
@@ -28,9 +29,11 @@ a {
 
 
 }
-.login{
+
+.login {
     margin-top: 4%;
 }
+
 .button {
     padding: 10px;
     height: fit-content;
@@ -46,9 +49,10 @@ u {
     text-decoration-thickness: 5px;
     text-underline-offset: 2px;
 }
-    /* end of top nav */
 
-.contaniner1{
+/* end of top nav */
+
+.contaniner1 {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
@@ -56,7 +60,7 @@ u {
     height: 400px;
     justify-content: space-between;
     width: 100%;
-   
+
 }
 
 .image1 {
@@ -67,13 +71,15 @@ u {
     padding-bottom: 0%;
 
 }
-.right{
+
+.right {
     padding: 35px;
     height: 400px;
     font-size: 11px;
 }
- /* end of contaniner1 */
- .container2 {
+
+/* end of contaniner1 */
+.container2 {
     display: flex;
     flex-wrap: wrap;
     flex: 1;
@@ -102,43 +108,51 @@ u {
 .container2 .each_data p {
     font-size: 24px;
     margin: 2px auto;
-} 
+}
+
 .data1 {
+
     display: flex;
+    background-color: #867D2A;
     flex-wrap: wrap;
-    flex: 1;
-    
-  
-    width: 100%;
+    margin: 10px 0;
+    padding: 10px 6px;
+    /* display: flex;
+    flex-wrap: wrap;
     padding: 10px 6px;
     height: auto;
-    margin: 10px 0;
+    margin: 10px 0; */
 }
 
 .data1 .each_data {
     width: auto;
     background-color: ghostwhite;
     margin: 0.5%;
-    min-width: 30%;
+    min-width: 25%;
     border-radius: 4px;
-    
+
     height: fit-content;
 
 
 }
 
- /* start of footer */
+/* start of footer */
 .footer {
-
     display: flex;
-    flex-wrap: wrap;
-    flex: 1;
     background-color: #867D2A;
+    flex-wrap: wrap;
+    margin: 10px 0;
+    padding: 10px 6px;
+
+    /* 
+ 
+    flex: 1;
+    
     float: left;
     width: 100%;
-    padding: 10px 6px;
+    
     color: aliceblue;
-    margin: 10px 0;
+     */
 }
 
 .footer .item {
@@ -147,7 +161,7 @@ u {
     min-width: 23%;
     border-radius: 4px;
     padding: 4px;
-    color:white;
+    color: white;
 
 
 }
