--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 .body {
     padding-left: 10%;
     padding-right: 10%;
-
+    background-color: #1f34ed;
 }
 
 .topnav {
@@ -83,9 +83,9 @@ u {
     display: flex;
     flex-wrap: wrap;
     flex: 1;
-    background-color: skyblue;
-    float: right;
+
     width: 100%;
+    background-color: #867D2A;
     padding: 5px 3px;
     height: auto;
     margin: 0px;
@@ -111,28 +111,26 @@ u {
 }
 
 .data1 {
-
     display: flex;
-    background-color: #867D2A;
     flex-wrap: wrap;
-    margin: 10px 0;
-    padding: 10px 6px;
-    /* display: flex;
-    flex-wrap: wrap;
+    flex: 1;
+
+
+    width: 100%;
     padding: 10px 6px;
     height: auto;
-    margin: 10px 0; */
+    margin: 10px 0;
 }
 
 .data1 .each_data {
     width: auto;
     background-color: ghostwhite;
     margin: 0.5%;
-    min-width: 25%;
+    min-width: 30%;
     border-radius: 4px;
-
+    padding: 2px;
     height: fit-content;
-
+    align-items: center;
 
 }
 
@@ -141,166 +139,21 @@ u {
     display: flex;
     background-color: #867D2A;
     flex-wrap: wrap;
-    margin: 10px 0;
     padding: 10px 6px;
-
-    /* 
- 
     flex: 1;
-    
-    float: left;
+    margin: 10px 0;
     width: 100%;
-    
     color: aliceblue;
-     */
+
 }
 
 .footer .item {
     width: auto;
     margin: 0.5%;
-    min-width: 23%;
+    min-width: 22%;
     border-radius: 4px;
-    padding: 4px;
+    padding: 2px;
     color: white;
 
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-.navigation{
-    display: flex;
-    background-color: #867D2A;
-    height: 100px;
-}
-.navitems {
-    list-style: none;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    flex-direction: row;
-    padding-bottom: 2% ;
-    padding-left: 0.5%;
-    padding-right: 0.5%;
-    padding-top: 2%;
-}
-.navitems .logo {
-    border-style: inset;
-    font-size: 30px;
-    margin-top: 1%;
-    
- 
-    
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-.navitems .name{
-    margin-right: 7%;
-     margin-left: 1%;
-   
-     color:black;
-     font-weight: 900;
-     font-size: 50px;
-     margin-top: 2%;
-     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-.sign{
-    
-  
-    margin-top: 10px;
-   
-}
-.sign button {
-    padding: 15% 1%;
-    transition: all 0.3s ease 0s;
-    
-    width: 100px;
-    font-size: 16px;
-    border-radius: 10%;
-    background-color: rgb(23, 173, 181);
-}
-.con button:hover {
-    color: rgb(173, 101, 13);
-}
-
-.nav{
-
-    background-color: grey;
-
-}
-.body {
-    flex-wrap: wrap;
-display: flex;
-height: fit-content;
-width: 100%;
-background-color: antiquewhite;
-
-}
-
-
-
-.footer {
-
-    display: flex;
-    flex-wrap: wrap;
-    flex: 1;
-    background-color: #867D2A;
-    float: left;
-    width: 100%;
-    height: fit-content;
-    padding: 2px 6px;
-    color: aliceblue;
-    margin: 10px 0;
-}
-
-
-
-
-.footer .item{
-    width: auto;
-    margin: 0.5%;
-    min-width: 20%;
-    border-radius: 4px;
-    text-align: center;
-    padding: 4px;
-    color: white;
-
-
-} */
