--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,7 @@
     margin-left: 2%;
     color: #1f34ed;
     margin-left: 10px;
-}
 
-.button{
-
-border-radius: 50px;
 }
 .list {
     margin-top: 1%;
@@ -43,17 +39,20 @@ margin-left: 20px;
 }
 
 .button {
+    border-radius: 50px;
     padding: 10px;
     height: fit-content;
-    background-color: #1f34ed;
+    background-color: #53ca72;
     color: antiquewhite;
     border: none;
-    margin-top: 3%;
+    width: fit-content;
+    margin-top: 4%;
     margin-right: 2%;
 }
 .search{
 margin-top: 2%;
   margin-left: 80%;
+  
 
 }
 
