--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,14 @@
     width: 100%;
     justify-content: space-between;
 }
-.header{
+
+.header {
     margin-left: 2%;
     color: #1f34ed;
     margin-left: 10px;
 
 }
+
 .list {
     margin-top: 1%;
     background-color: #867D2A;
@@ -30,7 +32,7 @@ a {
     padding-top: 20%;
     margin-top: 3%;
     font-size: 20px;
-margin-left: 20px;
+    margin-left: 20px;
 
 }
 
@@ -49,14 +51,15 @@ margin-left: 20px;
     margin-top: 4%;
     margin-right: 2%;
 }
-.search{
-margin-top: 2%;
-  margin-left: 80%;
-  
+
+.search {
+    margin-top: 2%;
+    margin-left: 80%;
+
 
 }
 
-.list{
+.list {
     border-radius: 70px;
     margin-left: 17%;
     margin-bottom: 5%;
@@ -100,6 +103,16 @@ u {
     text-orientation: upright;
 }
 
+@keyframes image1 {
+    from {
+        background-image: red;
+    }
+
+    to {
+        background-image: blue;
+    }
+}
+
 /* end of contaniner1 */
 .container2 {
     display: flex;
@@ -116,7 +129,7 @@ u {
 
 .container2 .each_data {
     width: auto;
-    background-color:grey;
+    background-color: grey;
     margin: 0.5%;
     height: 200px;
     min-width: 20%;
@@ -153,24 +166,35 @@ u {
     padding: 2px;
     height: fit-content;
     align-items: center;
+    box-shadow: 2px 2px 2px 2px black;
 
 }
 
 /* start of footer */
 .footer {
+
     display: flex;
     background-color: #867D2A;
-    flex-wrap: wrap;
-    padding: 10px 6px;
-    flex: 1;
-    margin: 10px 0;
+    color: white;
+    margin: 10px 10px 10px 10px;
+    height: fit-content;
     width: 100%;
-    color: aliceblue;
+    padding-left: 10px;
+    padding-right: 10px;
+    justify-content: space-between;
+    /* display: flex;
+    background-color: #867D2A;
+    flex-wrap: wrap;
+    
+    flex: 1;
+   
+    width: 100%;
+    color: aliceblue; */
 
 }
 
 .footer .item {
-    width: auto;
+   
     margin: 0.5%;
     min-width: 22%;
     border-radius: 4px;
