--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,9 @@
-.footer{
- background-color: darkgreen;
- justify-content: space-around;
+.logo{
+    display: flex;
+    flex-direction: row;
+    background-color: olive ;
+    margin-bottom: 1%;
+    margin-top: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
