--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -7,3 +7,19 @@
     margin-left: 1%;
     margin-right: 1%;
 }
+.navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 70px;
+    background-color: olive;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding-left: 20%;
+    padding-right: 20%;
+    
+}
