--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -44,3 +44,35 @@ italic{
 strong{
     color: #FBE30D;
 }
+.footer {
+
+    display: flex;
+    background-color: #867D2A;
+    color: white;
+    margin: 10px 10px 10px 10px;
+    height: fit-content;
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+    justify-content: space-between;
+    /* display: flex;
+    background-color: #867D2A;
+    flex-wrap: wrap;
+    
+    flex: 1;
+   
+    width: 100%;
+    color: aliceblue; */
+
+}
+
+.footer .item {
+   
+    margin: 0.5%;
+    min-width: 22%;
+    border-radius: 4px;
+    padding: 2px;
+    color: white;
+
+
+}
