--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -17,7 +17,7 @@
     margin-right: 5rem;
     padding-top: 2%;
     padding-bottom: 2%;
-    margin-top: 1%;
+    margin-top: 10%;
     margin-bottom: 1%;
     padding-left: 20%;
     padding-right: 20%;
@@ -29,6 +29,7 @@
 }
 .center>img{
     margin-left: 250px;
+    padding-top: 200px;
 }
 #us{
     text-align: center;
