--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,7 +1,9 @@
 
 form {
-    border: 3px solid #f1f1f1;
-   
+    border: 400px solid ghostwhite;
+    border-top: 0;
+    border-bottom: 0;
+   padding: 100px;
     
 }
 
