--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 .body {
-    background-color: #d0d1df;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .topnav {
+    box-shadow: -0.5px 0.5px 0.5px 0.5px black;
+    
     display: flex;
     background-color: #867D2A;
     color: white;
@@ -14,22 +15,25 @@
 }
 
 .header {
+    display: flex;
+    float: left;
     margin-left: 2%;
-    color: #1f34ed;
+
     margin-left: 10px;
 
 }
 
 .list {
     margin-top: 1%;
+    margin-bottom: 1%;
     background-color: #867D2A;
 }
 
-a {
+.list a {
 
     padding: 70px;
     text-decoration: none;
-    color: rgb(8, 0, 0);
+    color: rgb;
     border: none;
     padding-top: 20%;
     margin-top: 3%;
@@ -61,11 +65,15 @@ a {
 
 }
 
+hr {
+    color: #ED661F;
+}
+
 .list {
     border-radius: 70px;
     margin-left: 17%;
-    margin-bottom: 5%;
-    height: 50px;
+    margin-bottom: 1%;
+   color: white;
     align-items: center;
 }
 
@@ -78,49 +86,41 @@ u {
 /* end of top nav */
 
 .contaniner1 {
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px black;
+
+
     display: flex;
     height: fit-content;
-    height: 400px;
+
     justify-content: space-between;
     width: 100%;
-    margin-top: 2%;
+    margin-top: 0;
+    margin-bottom: 1%;
+
 
 }
 
-.image1 {
-    padding-right: 35px;
-    display: flex;
-    width: 65%;
-    float: left;
-    padding-bottom: 0%;
-
-}
-
-.right {
-    padding: 35px;
-    height: 400px;
-    font-size: 11px;
-    text-orientation: upright;
-}
-
-@keyframes image1 {
-    from {
-        background-image: red;
-    }
-
-    to {
-        background-image: blue;
-    }
-}
-
-/* end of contaniner1 */
-.container2 {
+.container1 {
+    box-shadow: 0.5px 0.5px 0.5px 0.5px ghostwhite;
     display: flex;
     flex-wrap: wrap;
     flex: 1;
+background-size:cover;
+    width: 100%;
+height: fit-content;
+    background-repeat: no-repeat;
+    height: 400px;
 
+    margin: 0px;
+    justify-content: space-between;
+}
+
+.container2 {
+    box-shadow: 0.5px 0.5px 0.5px 0.5px ghostwhite;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+align-items: center;
     width: 100%;
 
     padding: 5px 3px;
@@ -172,28 +172,45 @@ u {
 
 }
 
-/* start of footer */
 .footer {
-
+    box-shadow: 0.5px 0.5px 0.5px 0.5px black;
     display: flex;
+    flex-wrap: wrap;
+    flex: 1;
     background-color: #867D2A;
-    color: white;
-    margin: 10px 10px 10px 10px;
-    height: fit-content;
     width: 100%;
-    padding-left: 10px;
-    padding-right: 10px;
+
+    padding: 5px 3px;
+    height: auto;
+    margin: 0px;
     justify-content: space-between;
-   
 }
 
-.footer .item {
-   
+.footer .each_data {
+    width: auto;
+    margin: 0.5%;
+    height: auto;
+    min-width: 20%;
+    border-radius: 4px;
+    box-shadow: 2px black;
+    padding-top: 4px;
+align-items: center;
     margin: 0.5%;
     min-width: 22%;
-    border-radius: 4px;
     padding: 2px;
     color: white;
+}
 
+italic {
+    margin-top: 30%;
+    color: white;
+    font-style: italic;
+    font-size: 30px;
+    margin-left: 2px;
 
+}
+
+strong {
+
+    color: yellow;
 }
